# avp_system

./: .gitignore  README.md
src/: CMakeLists.txt
src/avp_main/: CMakeLists.txt  package.xml  readme.txt
src/avp_main/config/: avp_main_config.yaml
src/avp_main/launch/: avp_main.launch  mapping_main.launch
src/launch/: avp_system.launch
src/modules/common_msgs/: CMakeLists.txt  package.xml  readme.txt
src/modules/common_msgs/msg/: CanBusData.msg  readme.txt
src/modules/control/: CMakeLists.txt  package.xml
src/modules/control/launch/: control.launch
src/modules/control/src/: control_node.cpp
src/modules/control/src/ros_viewer/: readme.txt
src/modules/controller/: CMakeLists.txt  package.xml  readme.txt
src/modules/controller/config/: controller_config.yaml  planning_controller.yaml
src/modules/controller/include/: KinematicModel.h  controller.h  ros_viewer.h  slot.h
src/modules/controller/launch/: controller.launch
src/modules/controller/src/: KinematicModel.cpp  avp_control_node.cpp  controller.cpp  controller_node.cpp
src/modules/controller/src/ros_viewer/: controller.rviz  planning_controller.rviz  ros_viewer.cpp
src/modules/localization/: CMakeLists.txt  package.xml  readme.txt
src/modules/localization/config/: localization_config.yaml
src/modules/localization/include/: data_struct.h  localization.h  map.h  slot.h
src/modules/localization/include/data_pretreat/: data_pretreat.h
src/modules/localization/include/map_viewer/: map_viewer.h
src/modules/localization/include/publisher/: pose_publisher.h
src/modules/localization/include/subscriber/: chassis_data_subscriber.h  chassis_imu_data_subscriber.h  gps_odom_subscriber.h
src/modules/localization/launch/: localization.launch
src/modules/localization/msg/: readme.txt
src/modules/localization/src/: localization.cpp  localization_node.cpp  slot.cpp
src/modules/localization/src/data_pretreat/: data_pretreat.cpp
src/modules/localization/src/map_viewer/: map_viewer.cpp
src/modules/localization/src/publisher/: pose_publisher.cpp
src/modules/localization/src/subscriber/: chassis_data_subscriber.cpp  chassis_imu_data_subscriber.cpp  gps_odom_subscriber.cpp  ipm_seg_image_subscriber.cpp
src/modules/mapping/: CMakeLists.txt  package.xml  readme.txt
src/modules/mapping/config/: mapping_config.yaml
src/modules/mapping/include/: avp_mapping.h  data_struct.h  mapping.h  pose_interpolation.h  slot.h
src/modules/mapping/include/data_pretreat/: data_pretreat.h
src/modules/mapping/include/ros_viewer/: mapping_ros_viewer.h  viewer_interface.h
src/modules/mapping/include/subscriber/: gps_odom_subscriber.h  ipm_seg_image_subscriber.h
src/modules/mapping/launch/: avp_mapping.launch  avp_mapping.rviz  mapping.launch
src/modules/mapping/scripts/: getgrayvalue.py
src/modules/mapping/src/: avp_mapping.cpp  avp_mapping_node_main.cpp  map.cpp  mapping.cpp  mapping_node.cpp  pose_interpolation.cpp  slot.cpp
src/modules/mapping/src/data_pretreat/: data_pretreat.cpp
src/modules/mapping/src/ros_viewer/: mapping_ros_viewer.cpp  viewer_interface.cpp
src/modules/mapping/src/subscriber/: gps_odom_subscriber.cpp  ipm_seg_image_subscriber.cpp
src/modules/mapping_localization/: CMakeLists.txt  package.xml
src/modules/mapping_localization/src/: mapping_localization_node.cpp
src/modules/mapping_localization/src/publisher/: readme.txt
src/modules/perception/: CMakeLists.txt  package.xml  readme.txt
src/modules/perception/config/: bisenetv1_SUPS.py  perception_config.yaml
src/modules/perception/include/: ipm.h  perception.h  python_segmentation.h
src/modules/perception/ipm_train/: train.csv
src/modules/perception/launch/: perception.launch
src/modules/perception/scripts/: bisenetv2_ros_node.py  color2gray.py  convert_rgb_label.py  covert_rgb_label.py  extract_rgb-kmeans2.py  extract_rgb.py  extract_rgb_kmeans.py  generate_train_list.py  list_common_files.py  segmentation.py
src/modules/perception/src/: ipm.cc  perception.cpp  perception_node.cpp  python_segmentation.cpp
src/modules/perception/src/ros_viewer/: perception.rviz
src/modules/planning/: CMakeLists.txt  package.xml  readme.txt
src/modules/planning/config/: planning_config.yaml
src/modules/planning/include/: avp_map.h  planner.h  planning.h  ros_viewer.h
src/modules/planning/launch/: planning.launch
src/modules/planning/src/: avp_map.cpp  avp_planning_node.cpp  planner.cpp  planning.cpp  planning_node.cpp
src/modules/planning/src/publisher/: readme.txt
src/modules/planning/src/ros_viewer/: planning.rviz  readme.txt  ros_viewer.cpp
src/modules/planning/src/subscriber/: readme.txt
